--- a/markitup/sets/markdown/style.css
+++ b/markitup/sets/markdown/style.css
@@ -4,56 +4,56 @@
 // ------------------------------------------------------------------*/
 
 .markItUp .bold a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/bold.png);
+	background-image:url(images/bold.png);
 }
 .markItUp .italic a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/italic.png);
+	background-image:url(images/italic.png);
 }
 .markItUp .stroke a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/stroke.png);
+	background-image:url(images/stroke.png);
 }
 
 .markItUp .h1 a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/heading1.png);
+	background-image:url(images/heading1.png);
 }
 .markItUp .h2 a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/heading2.png);
+	background-image:url(images/heading2.png);
 }
 .markItUp .h3 a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/heading3.png);
+	background-image:url(images/heading3.png);
 }
 
 .markItUp .super a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/superscript.png);
+	background-image:url(images/superscript.png);
 }
 .markItUp .sub a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/subscript.png);
+	background-image:url(images/subscript.png);
 }
 
 .markItUp .blist a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/list-bullet.png);
+	background-image:url(images/list-bullet.png);
 }
 .markItUp .nlist a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/list-numeric.png);
+	background-image:url(images/list-numeric.png);
 }
 
 .markItUp .image a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/picture.png);
+	background-image:url(images/picture.png);
 }
 .markItUp .link a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/link.png);
+	background-image:url(images/link.png);
 }
 
 .markItUp .quote a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/quotes.png);
+	background-image:url(images/quotes.png);
 }
 .markItUp .code a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/code-block.png);
+	background-image:url(images/code-block.png);
 }
 .markItUp .icode a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/code-inline.png);
+	background-image:url(images/code-inline.png);
 }
 
 .markItUp .preview a {
-	background-image:url(chrome-extension://__MSG_@@extension_id__/markitup/sets/markdown/images/preview.png);
+	background-image:url(images/preview.png);
 }
